solved calculation visibility

--- a/5. Form/style.css
+++ b/5. Form/style.css
@@ -35,6 +35,7 @@ th {
 }
 .total-amount {
   border: none;
+  pointer-events: none;
 }
 .qty {
   width: 3rem;
